Fix sponsors nav white space wrap

--- a/website/static/website/styles/base.css
+++ b/website/static/website/styles/base.css
@@ -38,7 +38,7 @@ section {
   font-size: 1.5em;
 }
 
-.nav-tabs .nav-item {
+.nav-tabs .nav-item, .nav-pills .nav-item {
   white-space: nowrap;
 }
 
